# reservation_app

./: README.md  manage.py  pyproject.toml
reservation_app/: asgi.py  settings.py  urls.py  wsgi.py
reservations/: controller.py  models.py  tests.py  urls.py  views.py
reservations/migrations/: 0001_initial.py
reservations/templates/: list.html
