[tool.poetry]
name = "reservation-app"
version = "0.1.0"
description = ""
authors = ["Lazar Kurija <lazarkurija@gmail.com>"]
readme = "README.md"
packages = [{include = "reservation_app"}]

[tool.poetry.dependencies]
python = "3.10.8"
django = "^4.1.4"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
